# quick-preview

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: MediaGrid.tsx  PreviewModal.tsx  SettingsModal.tsx  Sidebar.tsx  VideoPreviewModal.tsx
src/lib/: mediaUtils.ts  storage.ts
src/store/: index.ts
src/types/: index.ts
